--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "@typescript-eslint/parser": "^5.8.1",
     "axios": "^1.5.1",
     "discord-api-types": "^0.26.1",
-    "discord.js": "^13.5.0",
+    "discord.js": "13.5.0",
     "dotenv": "^16.3.1",
     "mysql2": "^3.6.1",
     "node-cron": "^3.0.2",
